--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -131,7 +131,7 @@
     <!--    Context Params-->
     <context-param>
         <param-name>primefaces.THEME</param-name>
-        <param-value>andrew</param-value>
+        <param-value>sam</param-value>
     </context-param>
     
     <context-param>
