--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,12 @@
             <artifactId>jstl</artifactId>
             <version>1.2</version>
         </dependency> 
+        <dependency>
+            <groupId>jakarta.servlet</groupId>
+            <artifactId>jakarta.servlet-api</artifactId>
+            <version>5.0.0</version>  <!-- Use the latest version -->
+            <scope>provided</scope>   <!-- Provided by the server (optional) -->
+        </dependency>
         
         <dependency>
             <groupId>javax.xml.bind</groupId>
@@ -92,26 +98,30 @@
             <version>20080701</version>
         </dependency>
         
-<dependency>
-    <groupId>org.primefaces</groupId>
-    <artifactId>primefaces</artifactId>
-    <version>13.0.0</version>
-</dependency>
+        <dependency>
+            <groupId>org.primefaces</groupId>
+            <artifactId>primefaces</artifactId>
+            <version>13.0.0</version>
+        </dependency>
 
-       <dependency>
-    <groupId>org.primefaces.extensions</groupId>
-    <artifactId>primefaces-extensions</artifactId>
-    <version>13.0.0</version>
-</dependency>
+        <dependency>
+            <groupId>org.primefaces.extensions</groupId>
+            <artifactId>primefaces-extensions</artifactId>
+            <version>13.0.0</version>
+        </dependency>
 
                      
+        <dependency>
+            <groupId>com.zaxxer</groupId>
+            <artifactId>HikariCP</artifactId>
+            <version>5.0.1</version>
+        </dependency>
 
-
-       <dependency>
-    <groupId>org.primefaces.themes</groupId>
-    <artifactId>all-themes</artifactId>
-    <version>1.0.10</version>
-</dependency>
+        <dependency>
+            <groupId>org.primefaces.themes</groupId>
+            <artifactId>all-themes</artifactId>
+            <version>1.0.10</version>
+        </dependency>
 
        
         <!-- https://mvnrepository.com/artifact/org.primefaces.themes/sam -->
