--- a/pom.xml
+++ b/pom.xml
@@ -110,20 +110,26 @@
             <version>13.0.0</version>
         </dependency>
 
-                     
         <dependency>
-            <groupId>com.zaxxer</groupId>
-            <artifactId>HikariCP</artifactId>
-            <version>5.0.1</version>
-        </dependency>
+    <groupId>com.zaxxer</groupId>
+    <artifactId>HikariCP</artifactId>
+    <version>2.7.2</version>
+</dependency>
+
 
         <dependency>
             <groupId>org.primefaces.themes</groupId>
             <artifactId>all-themes</artifactId>
             <version>1.0.10</version>
         </dependency>
+        
+        <dependency>
+            <groupId>org.webjars</groupId>
+            <artifactId>font-awesome</artifactId>
+            <version>6.0.0</version>
+        </dependency>
 
-       
+
         <!-- https://mvnrepository.com/artifact/org.primefaces.themes/sam -->
         <!--        <dependency>
             <groupId>org.primefaces.themes</groupId>
@@ -144,7 +150,7 @@
         <dependency>
             <groupId>com.mysql</groupId>
             <artifactId>mysql-connector-j</artifactId>
-            <version>8.4.0</version>
+            <version>8.0.31</version>
         </dependency>
         <dependency>
             <groupId>org.seleniumhq.selenium</groupId>
