--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
     <version>1.0-SNAPSHOT</version>
     <packaging>war</packaging>
     <url>http://maven.apache.org</url>
-    <name>Client Manger Primefaces Refactored</name>
+    <name>Client Manger JDBC</name>
 
     <properties>
         <endorsed.dir>${project.build.directory}</endorsed.dir>
