--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,20 +22,22 @@ jobs:
     - name: Build WAR
       run: mvn clean package
 
-    - name: Copy WAR via SCP to remote server
+    - name: Copy WAR to remote server (deploy folder)
       uses: appleboy/scp-action@v0.1.4
       with:
         host: ${{ secrets.SERVER_HOST }}
         username: ${{ secrets.SERVER_USER }}
         key: ${{ secrets.SERVER_SSH_KEY }}
         source: target/cmaz.war
-        target: /opt/tomcat/webapps/
+        target: /home/azureuser/deploy/
 
-    - name: Restart Tomcat via SSH
+    - name: Move WAR to Tomcat and Restart
       uses: appleboy/ssh-action@master
       with:
         host: ${{ secrets.SERVER_HOST }}
         username: ${{ secrets.SERVER_USER }}
         key: ${{ secrets.SERVER_SSH_KEY }}
         script: |
+          sudo mv /home/azureuser/deploy/cmaz.war /opt/tomcat/webapps/
           sudo systemctl restart tomcat
+
