--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,18 +32,30 @@ jobs:
         target: /home/azureuser/deploy/
         strip_components: 1
 
-    - name: Move WAR to Tomcat and Restart
+    - name: Backup & Deploy WAR to Tomcat
       uses: appleboy/ssh-action@master
       with:
         host: ${{ secrets.SERVER_HOST }}
         username: ${{ secrets.SERVER_USER }}
         key: ${{ secrets.SERVER_SSH_KEY }}
         script: |
+          TIMESTAMP=$(date +'%Y%m%d-%H%M%S')
+          
+          # Backup if existing WAR is present
+          if [ -f /opt/tomcat/webapps/cmaz.war ]; then
+            echo "Backing up existing WAR..."
+            cp /opt/tomcat/webapps/cmaz.war /home/azureuser/backups/cmaz-${TIMESTAMP}.war
+          else
+            echo "No existing WAR to backup."
+          fi
+
+          # Deploy new WAR
           if [ -f /home/azureuser/deploy/cmaz.war ]; then
             sudo mv /home/azureuser/deploy/cmaz.war /opt/tomcat/webapps/
             sudo systemctl restart tomcat
+            echo "Deployment complete."
           else
-            echo "WAR file not found in /home/azureuser/deploy"
+            echo "New WAR file not found in /home/azureuser/deploy"
             exit 1
           fi
 
